--- a/ModelTesting.ipynb
+++ b/ModelTesting.ipynb
@@ -46,7 +46,7 @@
     "    def prepare_avg(self):\n",
     "        preds = self.make_prediction()\n",
     "        weights_reshape = np.reshape(self.data['score'].values, (preds.shape))\n",
-    "        return np.average(preds, weights=weights_reshape)\n",
+    "        return np.average(preds, weights=weights_reshape) * 100 \n",
     "\n",
     "class TestPredictor:\n",
     "    def __init__(self):\n",
@@ -74,9 +74,9 @@
     "        \n",
     "    def preparing_data(self):\n",
     "        top50 = pd.read_csv('Data/Filmweb_top50.csv', index_col=0)\n",
-    "        top50['imdb'] = (top50['imdb'].str.replace('/10', '').astype(float)) / 10\n",
-    "        top50['rottenTomatoes'] = top50['rottenTomatoes'].str.replace('%', '').astype(float) / 100\n",
-    "        top50['metacritic'] = top50['metacritic'].str.replace('/100', '').astype(float) / 100\n",
+    "        top50['imdb'] = (top50['imdb'].str.replace('/10', '').astype(float)) * 10 \n",
+    "        top50['rottenTomatoes'] = top50['rottenTomatoes'].str.replace('%', '').astype(float) \n",
+    "        top50['metacritic'] = top50['metacritic'].str.replace('/100', '').astype(float) \n",
     "\n",
     "        return top50\n",
     "\n",
@@ -84,9 +84,9 @@
     "        predictor = RedditBasedPredictor(titleFromPrediction)\n",
     "        resultFromPrediction = predictor.prepare_avg()\n",
     "        \n",
-    "        errorIMDB = round(abs((resultFromPrediction - self.data.loc[titleFromPrediction, 'imdb']) * 100), 2)\n",
-    "        errorRotten = round(abs((resultFromPrediction - self.data.loc[titleFromPrediction, 'rottenTomatoes']) * 100), 2)\n",
-    "        errorMetacritic = round(abs((resultFromPrediction - self.data.loc[titleFromPrediction, 'metacritic']) * 100), 2)\n",
+    "        errorIMDB = round(abs(resultFromPrediction - self.data.loc[titleFromPrediction, 'imdb']), 2)\n",
+    "        errorRotten = round(abs(resultFromPrediction - self.data.loc[titleFromPrediction, 'rottenTomatoes']), 2)\n",
+    "        errorMetacritic = round(abs(resultFromPrediction - self.data.loc[titleFromPrediction, 'metacritic']), 2)\n",
     "\n",
     "        data = [titleFromPrediction, self.data.loc[titleFromPrediction, 'year'], resultFromPrediction,\n",
     "                self.data.loc[titleFromPrediction, 'imdb'], errorIMDB, self.data.loc[titleFromPrediction, 'rottenTomatoes'],\n",
@@ -111,8 +111,7 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "    FinalTest = DataHandling()\n",
-    "    FinalTest.measure_all_movies()\n",
-    "\n"
+    "    FinalTest.measure_all_movies()\n"
    ]
   },
   {
