--- a/Prezentacja.ipynb
+++ b/Prezentacja.ipynb
@@ -134,6 +134,8 @@
     "### 4.4 Wykres dla Rotten Tomatoes\n",
     "![caption](Images/RottenTomatoes_error.png)\n",
     "\n",
+    "### 4.5 Wyniki dla zbioru 300 filmów Amerykańskich oraz Kanadyjskich z IMDB\n",
+    "![caption](Images/300_IMDB.png)\n",
     "\n",
     "# 5. Konkluzje\n",
     "### 5.1 Nie udało nam się uzyskać satysfakcjonującej dokładności\n",
