--- a/Prezentacja.ipynb
+++ b/Prezentacja.ipynb
@@ -107,7 +107,7 @@
     "### 3.2 CNN \n",
     "- optimizer : Adam\n",
     "- funkcja straty: binary cross-entropy\n",
-    "- najlepszy wynik: \n",
+    "- najlepszy wynik: 0.73\n",
     "\n",
     "![caption](Images/CNN.png)\n",
     "\n",
